force-app/main/default/objects/CX_Survey_Details__c/CX_Survey_Details__c.object-meta.xml
<CustomObject>
    <description>This object is used for Qualtrics to write CX data about respondents to.</description>
    <label>CX Survey Details</label>
    <nameField>
        <displayFormat>CXS-{0000}</displayFormat>
        <label>CX Survey Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CX Survey Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>