force-app/main/default/objects/CX_Survey_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CX Survey Details</relationshipLabel>
    <relationshipName>CX_Survey_Details</relationshipName>
    <type>Lookup</type>
</CustomField>