force-app/main/default/objects/CX_Survey_Details__c/fields/Original_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CX Survey Details (Original Case Number)</relationshipLabel>
    <relationshipName>CX_Survey_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>