force-app/main/default/objects/CX_Survey_Details__c/fields/Original_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CX_Survey_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>