force-app/main/default/objects/CX_Survey_Details__c/fields/Original_Case_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CX_Survey_Details</relationshipName>
    <type>Lookup</type>
</CustomField>