force-app/main/default/objects/CX_Survey_Details__c/fields/Preferred_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Number__c</fullName>
    <label>Preferred Phone Number</label>
    <type>Phone</type>
</CustomField>