force-app/main/default/objects/CX_Survey_Details__c/fields/Respondent_ID__c.field-meta.xml
<CustomField>
    <fullName>Respondent_ID__c</fullName>
    <description>Used by Walker to map the SmartSummary Report</description>
    <externalId>true</externalId>
    <label>Respondent ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>