force-app/main/default/objects/CX_Survey_Details__c/fields/Source_Sys_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Sys_Country_Code__c</fullName>
    <label>Source Sys Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>