force-app/main/default/objects/CX_Survey_Details__c/fields/Source_Sys_Customer_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Source_Sys_Customer_ID_Text__c</fullName>
    <description>This field holds the  customer account&apos;s ID in Text format. For ex like &apos;AB123&apos;. This field is populated from Qualtrics system.</description>
    <label>Source Sys Customer ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>