force-app/main/default/objects/CX_Survey_Details__c/fields/Source_Sys_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Sys_Customer_Name__c</fullName>
    <label>Source Sys Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>