force-app/main/default/objects/CX_Survey_Details__c/fields/Source_Sys_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Sys_Order_Number__c</fullName>
    <label>Source Sys Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>