force-app/main/default/objects/CX_Survey_Details__c/fields/To_Be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field Created as part of case#09797722
This field will be populated by Qualtrics application as a survey response. A case is created only if this field is set to true.</description>
    <label>To Be Contacted</label>
    <type>Checkbox</type>
</CustomField>