force-app/main/default/objects/CX_Survey_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FollowUp_Reason__c</columns>
    <columns>FollowUp_Type__c</columns>
    <division>*</division>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>