force-app/main/default/objects/CX_Survey_Details__c/listViews/Global_Transaction_Customer_Care_NAS.listView-meta.xml
<ListView>
    <fullName>Global_Transaction_Customer_Care_NAS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Respondent_Email__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>FollowUp_Reason__c</columns>
    <columns>To_Be_Contacted__c</columns>
    <columns>Response_Report__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>canada,unided</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>startsWith</operation>
        <value>Global Transactional</value>
    </filters>
    <label>Global Transaction Customer Care - NA</label>
</ListView>