force-app/main/default/objects/CX_Survey_Details__c/listViews/Global_Transactional_Survey.listView-meta.xml
<ListView>
    <fullName>Global_Transactional_Survey</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Respondent_Email__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Country__c</columns>
    <columns>FollowUp_Reason__c</columns>
    <columns>To_Be_Contacted__c</columns>
    <columns>Source_Sys_Customer_ID_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>Global Transactional</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>notEqual</operation>
        <value>United States,Canada</value>
    </filters>
    <label>Global Transactional Care Survey - Intl</label>
    <language>en_US</language>
</ListView>